fix(image): use devenv image from Docker Hub

--- a/devenv/Makefile
+++ b/devenv/Makefile
@@ -3,8 +3,8 @@ all: build
 .PHONY: build
 build:
 	@echo -n "Build devenv image"
-	@docker build . -t devenv
-	@docker images devenv
+	@docker build . -t reenjii/devenv
+	@docker images reenjii/devenv
 
 .PHONY: update
 update:
